--- a/content/docs/core-concepts/architecture/plugin-system.mdx
+++ b/content/docs/core-concepts/architecture/plugin-system.mdx
@@ -1,11 +1,11 @@
 ---
 title: "Plugin System"
-description: "Complete guide to the ElizaOS plugin architecture and extension system"
+description: "Complete guide to the ElizaOS plugin architecture and extension system with v1.2.0 enhancements"
 ---
 
 # Plugin System
 
-The ElizaOS plugin system is a powerful and flexible architecture that allows developers to extend agent functionality through modular, reusable components. This system provides a standardized way to add actions, providers, services, models, and more to agents.
+The ElizaOS v1.2.0 plugin system is a powerful and flexible architecture that allows developers to extend agent functionality through modular, reusable components. This system provides a standardized way to add actions, providers, services, models, and more to agents, with enhanced dependency resolution, migration support, and improved lifecycle management.
 
 ## Plugin Architecture Overview
 
@@ -17,6 +17,7 @@ The plugin system consists of several key components:
 export interface Plugin {
   name: string;                    // Unique plugin identifier
   description: string;             // Plugin description
+  version?: string;                // Plugin version (new in v1.2.0)
   
   // Lifecycle
   init?: (config: Record<string, string>, runtime: IAgentRuntime) => Promise<void>;
@@ -36,27 +37,243 @@ export interface Plugin {
   // Database
   adapter?: IDatabaseAdapter;      // Database adapter
   schema?: any;                    // Database schema
+  migrations?: Migration[];        // Database migrations (new in v1.2.0)
   
   // Metadata
   dependencies?: string[];         // Plugin dependencies
   testDependencies?: string[];     // Test dependencies
   priority?: number;               // Loading priority
   
+  // Enhanced dependency management (new in v1.2.0)
+  compatibilityVersion?: string;   // Runtime compatibility version
+  peerDependencies?: string[];     // Peer plugin dependencies
+  optionalDependencies?: string[]; // Optional plugin dependencies
+  
   // Testing
   tests?: TestSuite[];             // Test suites
+  
+  // Metadata for plugin registry (new in v1.2.0)
+  author?: string;                 // Plugin author
+  repository?: string;             // Source repository
+  license?: string;                // License information
 }
 ```
 
 ### Plugin Lifecycle
 
-Plugins follow a structured lifecycle:
+Plugins follow a structured lifecycle with enhanced dependency management:
 
-1. **Registration**: Plugin is registered with the runtime
-2. **Validation**: Plugin structure and dependencies are validated
-3. **Initialization**: Plugin's `init` function is called
-4. **Component Registration**: Actions, providers, services, etc. are registered
-5. **Migration**: Database schemas are migrated if needed
-6. **Activation**: Plugin becomes active and functional
+1. **Discovery**: Plugin is discovered through dependency resolution
+2. **Validation**: Plugin structure, version compatibility, and dependencies are validated
+3. **Dependency Resolution**: Plugin dependencies are resolved in correct order (enhanced in v1.2.0)
+4. **Registration**: Plugin is registered with the runtime
+5. **Migration**: Database schemas and data are migrated if needed (enhanced in v1.2.0)
+6. **Initialization**: Plugin's `init` function is called
+7. **Component Registration**: Actions, providers, services, etc. are registered
+8. **Activation**: Plugin becomes active and functional
+
+## v1.2.0 Plugin System Enhancements
+
+### Enhanced Dependency Resolution
+
+The plugin system now supports sophisticated dependency resolution with version compatibility checking:
+
+```typescript
+export const enhancedPlugin: Plugin = {
+  name: 'enhanced-plugin',
+  version: '1.2.0',
+  description: 'Plugin with enhanced dependency management',
+  compatibilityVersion: '>=1.2.0',
+  
+  dependencies: ['@elizaos/plugin-sql@^1.0.0'],
+  peerDependencies: ['@elizaos/plugin-discord@^2.0.0'],
+  optionalDependencies: ['@elizaos/plugin-cache@^1.1.0'],
+  
+  init: async (config, runtime) => {
+    // Enhanced dependency checking
+    const sqlPlugin = runtime.getPlugin('@elizaos/plugin-sql');
+    if (!sqlPlugin) {
+      throw new Error('Required SQL plugin not found');
+    }
+    
+    // Check version compatibility
+    if (!runtime.isPluginCompatible(sqlPlugin, '^1.0.0')) {
+      throw new Error('SQL plugin version incompatible');
+    }
+  }
+};
+```
+
+### Migration System
+
+Plugins can now define database migrations for schema evolution:
+
+```typescript
+export const migrationPlugin: Plugin = {
+  name: 'migration-example',
+  version: '1.2.0',
+  description: 'Plugin with database migrations',
+  
+  migrations: [
+    {
+      version: '1.0.0',
+      up: async (db, runtime) => {
+        // Create initial tables
+        await db.schema.createTable('plugin_data', (table) => {
+          table.uuid('id').primary();
+          table.uuid('agent_id').references('agents.id');
+          table.jsonb('data');
+          table.timestamp('created_at').defaultTo(db.fn.now());
+        });
+      },
+      down: async (db, runtime) => {
+        await db.schema.dropTable('plugin_data');
+      }
+    },
+    {
+      version: '1.1.0',
+      up: async (db, runtime) => {
+        // Add new columns
+        await db.schema.alterTable('plugin_data', (table) => {
+          table.jsonb('metadata');
+          table.timestamp('updated_at').defaultTo(db.fn.now());
+        });
+      },
+      down: async (db, runtime) => {
+        await db.schema.alterTable('plugin_data', (table) => {
+          table.dropColumn('metadata');
+          table.dropColumn('updated_at');
+        });
+      }
+    }
+  ]
+};
+```
+
+### Service-Based Architecture
+
+Plugins now primarily use services instead of clients for better lifecycle management:
+
+```typescript
+export class EnhancedService extends Service {
+  static serviceType = 'enhanced-service';
+  static dependencies = ['database', 'cache']; // Service-level dependencies
+  
+  private client: ExternalClient;
+  private healthCheckInterval: NodeJS.Timer;
+  
+  constructor(runtime: IAgentRuntime) {
+    super(runtime);
+  }
+  
+  static async start(runtime: IAgentRuntime): Promise<EnhancedService> {
+    const service = new EnhancedService(runtime);
+    
+    // Enhanced initialization with health checks
+    await service.initialize();
+    await service.startHealthChecks();
+    
+    return service;
+  }
+  
+  async initialize() {
+    // Initialize external client with retry logic
+    this.client = new ExternalClient({
+      apiKey: this.runtime.getSetting('API_KEY'),
+      timeout: 30000
+    });
+    
+    // Test connection
+    await this.client.ping();
+    
+    // Register event handlers
+    this.runtime.registerEvent('message_received', this.handleMessage.bind(this));
+  }
+  
+  async startHealthChecks() {
+    this.healthCheckInterval = setInterval(async () => {
+      try {
+        await this.client.ping();
+      } catch (error) {
+        this.runtime.logger.error('Health check failed:', error);
+        // Emit health check failure event
+        await this.runtime.emitEvent('service_health_check_failed', {
+          service: this.constructor.name,
+          error: error.message
+        });
+      }
+    }, 60000); // Check every minute
+  }
+  
+  async stop() {
+    if (this.healthCheckInterval) {
+      clearInterval(this.healthCheckInterval);
+    }
+    
+    if (this.client) {
+      await this.client.disconnect();
+    }
+  }
+  
+  // Enhanced method with context tracking
+  async handleMessage(context: any) {
+    const { message, runtime } = context;
+    
+    // Access action context if available
+    const actionContext = runtime.currentActionContext;
+    if (actionContext) {
+      this.runtime.logger.debug(
+        `Handling message in action context: ${actionContext.actionName}`
+      );
+    }
+    
+    // Process message with enhanced logging
+    await this.processMessage(message);
+  }
+}
+```
+
+### Enhanced Event System
+
+Plugins can now register domain-specific events:
+
+```typescript
+export const eventEnhancedPlugin: Plugin = {
+  name: 'event-enhanced',
+  version: '1.2.0',
+  description: 'Plugin with enhanced event handling',
+  
+  events: {
+    // Domain-specific events
+    'database:connection_error': [
+      async (context) => {
+        const { error, runtime } = context;
+        await handleDatabaseError(error, runtime);
+      }
+    ],
+    
+    'ai:model_response': [
+      async (context) => {
+        const { response, modelType, runtime } = context;
+        await logModelUsage(response, modelType, runtime);
+      }
+    ],
+    
+    // Standard events with enhanced context
+    'message_received': [
+      async (context) => {
+        const { message, runtime, runId, actionContext } = context;
+        
+        // Enhanced context available
+        console.log(`Message received in run ${runId}`);
+        if (actionContext) {
+          console.log(`Within action: ${actionContext.actionName}`);
+        }
+      }
+    ]
+  }
+};
+```
 
 ## Plugin Types
 
@@ -401,37 +618,52 @@ const runtime = new AgentRuntime({
 
 ### Plugin Resolution
 
-The runtime resolves plugins through multiple mechanisms:
+The runtime resolves plugins through enhanced mechanisms with dependency management:
 
 ```typescript
-// packages/core/src/runtime.ts
+// packages/core/src/runtime.ts - Enhanced for v1.2.0
 async registerPlugin(plugin: Plugin): Promise<void> {
-  // 1. Validate plugin structure
+  // 1. Validate plugin structure and compatibility
   if (!plugin?.name) {
     throw new Error('Plugin name is required');
   }
   
-  // 2. Check for duplicates
+  // 2. Check version compatibility (new in v1.2.0)
+  if (plugin.compatibilityVersion) {
+    if (!this.isRuntimeCompatible(plugin.compatibilityVersion)) {
+      throw new Error(`Plugin ${plugin.name} requires runtime version ${plugin.compatibilityVersion}`);
+    }
+  }
+  
+  // 3. Check for duplicates
   const existingPlugin = this.plugins.find(p => p.name === plugin.name);
   if (existingPlugin) {
     this.logger.warn(`Plugin ${plugin.name} already registered`);
     return;
   }
   
-  // 3. Add to active plugins
+  // 4. Validate dependencies (enhanced in v1.2.0)
+  await this.validatePluginDependencies(plugin);
+  
+  // 5. Add to active plugins
   this.plugins.push(plugin);
   
-  // 4. Initialize plugin
+  // 6. Run migrations if present (new in v1.2.0)
+  if (plugin.migrations) {
+    await this.runPluginMigrations(plugin);
+  }
+  
+  // 7. Initialize plugin
   if (plugin.init) {
     await plugin.init(plugin.config || {}, this);
   }
   
-  // 5. Register database adapter
+  // 8. Register database adapter
   if (plugin.adapter) {
     this.registerDatabaseAdapter(plugin.adapter);
   }
   
-  // 6. Register components
+  // 9. Register components
   if (plugin.actions) {
     plugin.actions.forEach(action => this.registerAction(action));
   }
@@ -463,6 +695,80 @@ async registerPlugin(plugin: Plugin): Promise<void> {
       handlers.forEach(handler => this.registerEvent(event, handler));
     });
   }
+  
+  // 10. Log successful registration with version (new in v1.2.0)
+  this.logger.info(`Plugin ${plugin.name}${plugin.version ? ` v${plugin.version}` : ''} registered successfully`);
+}
+
+// New in v1.2.0: Plugin dependency validation
+private async validatePluginDependencies(plugin: Plugin): Promise<void> {
+  const missing: string[] = [];
+  
+  // Check required dependencies
+  if (plugin.dependencies) {
+    for (const dep of plugin.dependencies) {
+      const [name, version] = dep.split('@');
+      const depPlugin = this.plugins.find(p => p.name === name);
+      
+      if (!depPlugin) {
+        missing.push(dep);
+      } else if (version && !this.isPluginVersionCompatible(depPlugin, version)) {
+        throw new Error(`Plugin ${name} version ${depPlugin.version} incompatible with required ${version}`);
+      }
+    }
+  }
+  
+  // Check peer dependencies
+  if (plugin.peerDependencies) {
+    for (const dep of plugin.peerDependencies) {
+      const [name, version] = dep.split('@');
+      const depPlugin = this.plugins.find(p => p.name === name);
+      
+      if (!depPlugin) {
+        this.logger.warn(`Peer dependency ${dep} not found for plugin ${plugin.name}`);
+      } else if (version && !this.isPluginVersionCompatible(depPlugin, version)) {
+        this.logger.warn(`Peer dependency ${name} version incompatible`);
+      }
+    }
+  }
+  
+  if (missing.length > 0) {
+    throw new Error(`Missing dependencies for plugin ${plugin.name}: ${missing.join(', ')}`);
+  }
+}
+
+// New in v1.2.0: Plugin migration execution
+private async runPluginMigrations(plugin: Plugin): Promise<void> {
+  if (!plugin.migrations || plugin.migrations.length === 0) {
+    return;
+  }
+  
+  const migrationTable = 'plugin_migrations';
+  
+  // Ensure migration table exists
+  await this.adapter.createMigrationTable(migrationTable);
+  
+  // Get applied migrations
+  const appliedMigrations = await this.adapter.getAppliedMigrations(plugin.name);
+  
+  // Sort migrations by version
+  const sortedMigrations = plugin.migrations.sort((a, b) => 
+    this.compareVersions(a.version, b.version)
+  );
+  
+  // Apply pending migrations
+  for (const migration of sortedMigrations) {
+    if (!appliedMigrations.includes(migration.version)) {
+      try {
+        await migration.up(this.adapter.db, this);
+        await this.adapter.recordMigration(plugin.name, migration.version);
+        this.logger.info(`Applied migration ${migration.version} for plugin ${plugin.name}`);
+      } catch (error) {
+        this.logger.error(`Failed to apply migration ${migration.version}:`, error);
+        throw error;
+      }
+    }
+  }
 }
 ```
 
@@ -470,50 +776,103 @@ async registerPlugin(plugin: Plugin): Promise<void> {
 
 ### Dependency Management
 
-Plugins can declare dependencies on other plugins:
+Plugins can declare enhanced dependencies with version specifications:
 
 ```typescript
 export const dependentPlugin: Plugin = {
   name: 'advanced-plugin',
+  version: '2.0.0',
   description: 'Plugin that depends on others',
+  compatibilityVersion: '>=1.2.0',
   
+  // Required dependencies with version constraints
   dependencies: [
-    '@elizaos/plugin-sql',      // Database functionality
-    '@elizaos/plugin-discord',  // Discord integration
-    'custom-base-plugin'        // Custom dependency
+    '@elizaos/plugin-sql@^1.0.0',      // Database functionality
+    '@elizaos/plugin-discord@^2.0.0',  // Discord integration
+    'custom-base-plugin@>=1.1.0'       // Custom dependency
+  ],
+  
+  // Peer dependencies (should be present but not automatically installed)
+  peerDependencies: [
+    '@elizaos/plugin-cache@^1.0.0'     // Cache functionality
+  ],
+  
+  // Optional dependencies (nice to have but not required)
+  optionalDependencies: [
+    '@elizaos/plugin-analytics@^1.0.0' // Analytics functionality
   ],
   
   init: async (config: Record<string, string>, runtime: IAgentRuntime) => {
     // Verify dependencies are available
-    const sqlPlugin = runtime.plugins.find(p => p.name === '@elizaos/plugin-sql');
+    const sqlPlugin = runtime.getPlugin('@elizaos/plugin-sql');
     if (!sqlPlugin) {
       throw new Error('SQL plugin dependency not found');
     }
     
+    // Check version compatibility
+    if (!runtime.isPluginVersionCompatible(sqlPlugin, '^1.0.0')) {
+      throw new Error('SQL plugin version incompatible');
+    }
+    
     // Use dependency functionality
     const database = runtime.adapter;
-    // ... initialization logic
+    
+    // Optional dependency handling
+    const analyticsPlugin = runtime.getPlugin('@elizaos/plugin-analytics');
+    if (analyticsPlugin) {
+      // Enable analytics if available
+      await this.enableAnalytics(analyticsPlugin);
+    }
   }
 };
 ```
 
 ### Dependency Resolution
 
-Dependencies are resolved during plugin loading:
+Dependencies are resolved during plugin loading with enhanced version checking:
 
 ```typescript
-// Simplified dependency resolution
-function resolveDependencies(plugins: Plugin[]): Plugin[] {
+// Enhanced dependency resolution for v1.2.0
+async function resolveDependencies(plugins: Plugin[]): Promise<Plugin[]> {
   const resolved: Plugin[] = [];
   const pending = [...plugins];
+  const maxIterations = pending.length * 2; // Prevent infinite loops
+  let iterations = 0;
   
-  while (pending.length > 0) {
+  while (pending.length > 0 && iterations < maxIterations) {
     const plugin = pending.shift()!;
+    iterations++;
     
     // Check if dependencies are resolved
-    const unresolvedDeps = plugin.dependencies?.filter(dep => 
-      !resolved.some(p => p.name === dep)
-    ) || [];
+    const unresolvedDeps = plugin.dependencies?.filter(dep => {
+      const [name, version] = dep.split('@');
+      const resolvedPlugin = resolved.find(p => p.name === name);
+      
+      if (!resolvedPlugin) {
+        return true; // Not resolved yet
+      }
+      
+      // Check version compatibility if specified
+      if (version && !isVersionCompatible(resolvedPlugin.version, version)) {
+        throw new Error(`Plugin ${name} version ${resolvedPlugin.version} incompatible with required ${version}`);
+      }
+      
+      return false; // Resolved and compatible
+    }) || [];
+    
+    // Check peer dependencies (don't block but warn)
+    if (plugin.peerDependencies) {
+      for (const dep of plugin.peerDependencies) {
+        const [name, version] = dep.split('@');
+        const peerPlugin = resolved.find(p => p.name === name);
+        
+        if (!peerPlugin) {
+          console.warn(`Peer dependency ${dep} not found for plugin ${plugin.name}`);
+        } else if (version && !isVersionCompatible(peerPlugin.version, version)) {
+          console.warn(`Peer dependency ${name} version ${peerPlugin.version} incompatible with required ${version}`);
+        }
+      }
+    }
     
     if (unresolvedDeps.length === 0) {
       resolved.push(plugin);
@@ -523,7 +882,38 @@ function resolveDependencies(plugins: Plugin[]): Plugin[] {
     }
   }
   
+  // Check for circular dependencies
+  if (pending.length > 0) {
+    const pendingNames = pending.map(p => p.name);
+    throw new Error(`Circular dependency detected or missing dependencies: ${pendingNames.join(', ')}`);
+  }
+  
   return resolved;
+}
+
+// Version compatibility checking
+function isVersionCompatible(current: string, required: string): boolean {
+  // Simple semver compatibility check
+  // This would use a full semver library in production
+  
+  if (required.startsWith('^')) {
+    const requiredVersion = required.slice(1);
+    return current >= requiredVersion && current.split('.')[0] === requiredVersion.split('.')[0];
+  }
+  
+  if (required.startsWith('>=')) {
+    const requiredVersion = required.slice(2);
+    return current >= requiredVersion;
+  }
+  
+  if (required.startsWith('~')) {
+    const requiredVersion = required.slice(1);
+    const [major, minor] = requiredVersion.split('.');
+    const [currentMajor, currentMinor] = current.split('.');
+    return currentMajor === major && currentMinor === minor;
+  }
+  
+  return current === required;
 }
 ```
 
