--- a/content/docs/getting-started/configuration.mdx
+++ b/content/docs/getting-started/configuration.mdx
@@ -1,8 +1,747 @@
 ---
 title: Configuration
-description: Basic configuration and setup
+description: Complete configuration guide for ElizaOS v1.2.0
 ---
 
 # Configuration
 
-Content to be added.
+This guide covers comprehensive configuration for ElizaOS v1.2.0, including environment setup, development workflows, project types, and best practices.
+
+import { Callout } from 'fumadocs-ui/components/callout';
+import { Steps, Step } from 'fumadocs-ui/components/steps';
+import { Cards, Card } from 'fumadocs-ui/components/card';
+import { Tabs, Tab } from 'fumadocs-ui/components/tabs';
+
+<Callout type="info">
+ElizaOS v1.2.0 introduces enhanced configuration management with interactive tools, improved environment handling, and streamlined development workflows.
+</Callout>
+
+## Environment Configuration
+
+### Interactive Environment Setup
+
+The easiest way to configure your ElizaOS environment is through the interactive CLI:
+
+```bash
+# Interactive environment configuration (recommended)
+elizaos env interactive
+
+# Edit local environment variables
+elizaos env edit-local
+
+# List all environment variables
+elizaos env list
+
+# Check environment health
+elizaos env check
+```
+
+### Manual Environment Setup
+
+<Steps>
+<Step>
+
+### Create Environment File
+
+```bash
+# Copy example environment file
+cp .env.example .env
+
+# Edit with your preferred editor
+nano .env
+```
+
+</Step>
+<Step>
+
+### Core Configuration
+
+Add essential configuration variables:
+
+```bash
+# Required: Model Provider API Key
+OPENAI_API_KEY=your_openai_key_here
+
+# Optional: Alternative providers
+ANTHROPIC_API_KEY=your_anthropic_key_here
+GOOGLE_GENERATIVE_AI_API_KEY=your_google_key_here
+
+# Database Configuration
+POSTGRES_URL=postgresql://user:password@localhost:5432/eliza
+# Or use PGLite for development
+PGLITE_DATA_DIR=./data/pglite
+
+# Server Configuration
+SERVER_PORT=3000
+SERVER_HOST=localhost
+NODE_ENV=development
+```
+
+</Step>
+<Step>
+
+### Validate Configuration
+
+```bash
+# Test database connection
+elizaos env test-db
+
+# Test API keys
+elizaos env test-keys
+
+# Check overall health
+elizaos env check
+```
+
+</Step>
+</Steps>
+
+## Project Types
+
+ElizaOS v1.2.0 supports four distinct project types:
+
+### Project Type Selection
+
+<Tabs items={['Project', 'Plugin', 'Agent', 'TEE']}>
+  <Tab value="Project">
+    **Full ElizaOS Application**
+    
+    - Complete agent framework with all features
+    - Web interface and API endpoints
+    - Database integration and persistence
+    - Plugin system support
+    - Multi-platform connections
+    
+    ```bash
+    elizaos create my-agent --type project
+    ```
+    
+    **Use when**: Building a complete AI agent application
+  </Tab>
+  <Tab value="Plugin">
+    **Plugin Development**
+    
+    - Extend ElizaOS with custom functionality
+    - Reusable components for the community
+    - Action, provider, and evaluator development
+    - Testing and publishing support
+    
+    ```bash
+    elizaos create my-plugin --type plugin
+    ```
+    
+    **Use when**: Creating extensions for ElizaOS
+  </Tab>
+  <Tab value="Agent">
+    **Agent Character Definition**
+    
+    - Standalone character JSON files
+    - Personality and behavior configuration
+    - Quick agent prototyping
+    - Simple deployment scenarios
+    
+    ```bash
+    elizaos create my-character --type agent
+    ```
+    
+    **Use when**: Defining agent personalities and behaviors
+  </Tab>
+  <Tab value="TEE">
+    **Trusted Execution Environment**
+    
+    - Secure, decentralized agent deployment
+    - Blockchain integration support
+    - Privacy-preserving computations
+    - Distributed agent networks
+    
+    ```bash
+    elizaos create my-tee-agent --type tee
+    ```
+    
+    **Use when**: Deploying secure, decentralized agents
+  </Tab>
+</Tabs>
+
+### Project Structure
+
+Each project type has its own structure:
+
+<Tabs items={['Project Structure', 'Plugin Structure', 'Agent Structure']}>
+  <Tab value="Project Structure">
+    ```
+    my-agent/
+    ├── .env                    # Environment variables
+    ├── .env.example            # Environment template
+    ├── package.json            # Dependencies and scripts
+    ├── tsconfig.json          # TypeScript configuration
+    ├── characters/            # Agent character definitions
+    │   └── default.json       # Default character
+    ├── knowledge/             # Knowledge base files
+    ├── src/                   # Source code
+    │   ├── index.ts           # Main entry point
+    │   └── plugins/           # Custom plugins
+    ├── tests/                 # Test files
+    └── docs/                  # Documentation
+    ```
+  </Tab>
+  <Tab value="Plugin Structure">
+    ```
+    plugin-my-plugin/
+    ├── package.json           # Plugin metadata
+    ├── tsconfig.json          # TypeScript configuration
+    ├── src/
+    │   ├── index.ts           # Plugin entry point
+    │   ├── actions/           # Custom actions
+    │   ├── providers/         # Custom providers
+    │   └── evaluators/        # Custom evaluators
+    ├── tests/                 # Plugin tests
+    ├── examples/              # Usage examples
+    └── README.md              # Plugin documentation
+    ```
+  </Tab>
+  <Tab value="Agent Structure">
+    ```
+    my-character/
+    ├── character.json         # Agent definition
+    ├── knowledge/             # Knowledge files
+    ├── prompts/               # Custom prompts
+    └── config/                # Configuration files
+    ```
+  </Tab>
+</Tabs>
+
+## Development Workflow
+
+### Development Commands
+
+<Tabs items={['Development', 'Testing', 'Deployment']}>
+  <Tab value="Development">
+    ```bash
+    # Start development server with hot-reload
+    elizaos dev
+    
+    # Start with specific character
+    elizaos dev --character characters/my-agent.json
+    
+    # Start with build
+    elizaos dev --build
+    
+    # Start on custom port
+    elizaos dev --port 8080
+    
+    # Reconfigure services
+    elizaos dev --configure
+    ```
+    
+    **Development Features:**
+    - Hot-reload on file changes
+    - Detailed logging and debugging
+    - Live configuration updates
+    - Real-time error reporting
+  </Tab>
+  <Tab value="Testing">
+    ```bash
+    # Run all tests
+    elizaos test
+    
+    # Run component tests
+    elizaos test component
+    
+    # Run end-to-end tests
+    elizaos test e2e
+    
+    # Run tests with coverage
+    elizaos test --coverage
+    
+    # Run specific test file
+    elizaos test --file my-test.spec.ts
+    ```
+    
+    **Testing Features:**
+    - Unit and integration tests
+    - Component testing framework
+    - End-to-end testing support
+    - Coverage reporting
+  </Tab>
+  <Tab value="Deployment">
+    ```bash
+    # Build for production
+    elizaos start --build
+    
+    # Start production server
+    elizaos start
+    
+    # Background process
+    nohup elizaos start > elizaos.log 2>&1 &
+    
+    # With environment file
+    elizaos start --env production
+    ```
+    
+    **Deployment Features:**
+    - Production optimizations
+    - Environment-specific configs
+    - Background process support
+    - Logging and monitoring
+  </Tab>
+</Tabs>
+
+## Plugin Management
+
+### Plugin Commands
+
+```bash
+# List available plugins
+elizaos plugins list
+
+# List installed plugins
+elizaos plugins installed-plugins
+
+# Add a plugin
+elizaos plugins add @elizaos/plugin-discord
+
+# Remove a plugin
+elizaos plugins remove @elizaos/plugin-discord
+
+# Update plugins
+elizaos update --packages
+```
+
+### Popular Plugins
+
+<Cards>
+  <Card title="Discord Plugin" href="/docs/plugins/discord">
+    Connect your agent to Discord servers
+  </Card>
+  <Card title="Telegram Plugin" href="/docs/plugins/telegram">
+    Enable Telegram bot functionality
+  </Card>
+  <Card title="Twitter Plugin" href="/docs/plugins/twitter">
+    Integrate with Twitter/X platform
+  </Card>
+  <Card title="OpenAI Plugin" href="/docs/plugins/openai">
+    Enhanced OpenAI model integration
+  </Card>
+</Cards>
+
+### Plugin Selection Guide
+
+<Tabs items={['Communication', 'AI Models', 'Blockchain', 'Utilities']}>
+  <Tab value="Communication">
+    **Platform Integrations**
+    
+    - `@elizaos/plugin-discord` - Discord bot functionality
+    - `@elizaos/plugin-telegram` - Telegram integration
+    - `@elizaos/plugin-twitter` - Twitter/X platform
+    - `@elizaos/plugin-slack` - Slack workspace integration
+    
+    **When to use**: Connect your agent to messaging platforms
+  </Tab>
+  <Tab value="AI Models">
+    **Model Providers**
+    
+    - `@elizaos/plugin-openai` - OpenAI models (GPT-4, etc.)
+    - `@elizaos/plugin-anthropic` - Claude models
+    - `@elizaos/plugin-google` - Google AI models
+    - `@elizaos/plugin-ollama` - Local model support
+    
+    **When to use**: Integrate different AI model providers
+  </Tab>
+  <Tab value="Blockchain">
+    **Blockchain Integrations**
+    
+    - `@elizaos/plugin-ethereum` - Ethereum blockchain
+    - `@elizaos/plugin-solana` - Solana blockchain
+    - `@elizaos/plugin-defi` - DeFi protocols
+    - `@elizaos/plugin-nft` - NFT marketplace integration
+    
+    **When to use**: Build blockchain-enabled agents
+  </Tab>
+  <Tab value="Utilities">
+    **Utility Plugins**
+    
+    - `@elizaos/plugin-image` - Image generation and processing
+    - `@elizaos/plugin-search` - Web search capabilities
+    - `@elizaos/plugin-calendar` - Calendar and scheduling
+    - `@elizaos/plugin-files` - File system operations
+    
+    **When to use**: Add specific functionality to your agent
+  </Tab>
+</Tabs>
+
+## Environment Variables Reference
+
+### Core Variables
+
+```bash
+# Model Provider (required)
+OPENAI_API_KEY=your_openai_key_here
+ANTHROPIC_API_KEY=your_anthropic_key_here
+GOOGLE_GENERATIVE_AI_API_KEY=your_google_key_here
+
+# Database Configuration
+POSTGRES_URL=postgresql://user:password@localhost:5432/eliza
+PGLITE_DATA_DIR=./data/pglite
+
+# Server Configuration
+SERVER_PORT=3000
+SERVER_HOST=localhost
+NODE_ENV=development
+LOG_LEVEL=info
+
+# UI Configuration
+ELIZA_UI_ENABLE=true
+ELIZA_SERVER_AUTH_TOKEN=your_auth_token_here
+```
+
+### Platform Integration Variables
+
+<Tabs items={['Discord', 'Telegram', 'Twitter', 'Blockchain']}>
+  <Tab value="Discord">
+    ```bash
+    # Discord Configuration
+    DISCORD_APPLICATION_ID=your_discord_app_id
+    DISCORD_API_TOKEN=your_discord_bot_token
+    DISCORD_ENABLE_SLASH_COMMANDS=true
+    DISCORD_ENABLE_VOICE=false
+    ```
+  </Tab>
+  <Tab value="Telegram">
+    ```bash
+    # Telegram Configuration
+    TELEGRAM_BOT_TOKEN=your_telegram_bot_token
+    TELEGRAM_ENABLE_GROUPS=true
+    TELEGRAM_WEBHOOK_URL=https://your-domain.com/webhook
+    ```
+  </Tab>
+  <Tab value="Twitter">
+    ```bash
+    # Twitter Configuration
+    TWITTER_USERNAME=your_twitter_username
+    TWITTER_PASSWORD=your_twitter_password
+    TWITTER_EMAIL=your_twitter_email
+    TWITTER_ENABLE_POST_GENERATION=true
+    TWITTER_POST_IMMEDIATELY=false
+    ```
+  </Tab>
+  <Tab value="Blockchain">
+    ```bash
+    # Ethereum Configuration
+    EVM_PRIVATE_KEY=your_ethereum_private_key
+    EVM_PROVIDER_URL=https://mainnet.infura.io/v3/your_key
+    EVM_CHAINS=mainnet,sepolia,base,arbitrum
+    
+    # Solana Configuration
+    SOLANA_PRIVATE_KEY=your_solana_private_key
+    SOLANA_RPC_URL=https://api.mainnet-beta.solana.com
+    ```
+  </Tab>
+</Tabs>
+
+## Best Practices
+
+### Environment Setup
+
+<Steps>
+<Step>
+
+### Use Environment Templates
+
+Start with the provided `.env.example` file:
+
+```bash
+cp .env.example .env
+```
+
+</Step>
+<Step>
+
+### Secure API Keys
+
+Never commit API keys to version control:
+
+```bash
+# Add to .gitignore
+echo ".env" >> .gitignore
+echo ".env.local" >> .gitignore
+```
+
+</Step>
+<Step>
+
+### Use Environment-Specific Files
+
+Create separate environment files:
+
+```bash
+.env.development
+.env.staging
+.env.production
+```
+
+</Step>
+<Step>
+
+### Validate Configuration
+
+Regularly check your configuration:
+
+```bash
+elizaos env check
+```
+
+</Step>
+</Steps>
+
+### Development Workflow
+
+1. **Start with Interactive Setup**: Use `elizaos env interactive` for initial configuration
+2. **Use Development Mode**: Run `elizaos dev` for active development
+3. **Test Regularly**: Use `elizaos test` to catch issues early
+4. **Keep Updated**: Run `elizaos update --check` regularly
+5. **Monitor Logs**: Use appropriate `LOG_LEVEL` settings
+
+### Plugin Management
+
+1. **Choose Carefully**: Only install plugins you need
+2. **Keep Updated**: Update plugins with `elizaos update --packages`
+3. **Test Compatibility**: Test plugins after updates
+4. **Monitor Performance**: Remove unused plugins
+
+## Common Workflows
+
+### Setting Up a New Agent
+
+<Steps>
+<Step>
+
+### Create Project
+
+```bash
+elizaos create my-agent --type project
+cd my-agent
+```
+
+</Step>
+<Step>
+
+### Configure Environment
+
+```bash
+elizaos env interactive
+```
+
+</Step>
+<Step>
+
+### Add Required Plugins
+
+```bash
+elizaos plugins add @elizaos/plugin-discord
+elizaos plugins add @elizaos/plugin-openai
+```
+
+</Step>
+<Step>
+
+### Start Development
+
+```bash
+elizaos dev
+```
+
+</Step>
+<Step>
+
+### Test and Deploy
+
+```bash
+elizaos test
+elizaos start --build
+```
+
+</Step>
+</Steps>
+
+### Plugin Development
+
+<Steps>
+<Step>
+
+### Create Plugin
+
+```bash
+elizaos create my-plugin --type plugin
+cd plugin-my-plugin
+```
+
+</Step>
+<Step>
+
+### Develop Plugin
+
+```bash
+elizaos dev
+```
+
+</Step>
+<Step>
+
+### Test Plugin
+
+```bash
+elizaos test
+```
+
+</Step>
+<Step>
+
+### Publish Plugin
+
+```bash
+elizaos publish
+```
+
+</Step>
+</Steps>
+
+## Troubleshooting
+
+### Common Configuration Issues
+
+<Tabs items={['Environment', 'Database', 'Plugins', 'CLI']}>
+  <Tab value="Environment">
+    **API Key Issues**
+    
+    ```bash
+    # Check if API key is loaded
+    elizaos env list | grep OPENAI_API_KEY
+    
+    # Test API key validity
+    elizaos env test-keys
+    
+    # Common issues:
+    # - Extra spaces or quotes in .env
+    # - Wrong API key format
+    # - Insufficient API credits
+    ```
+    
+    **Environment Loading Issues**
+    
+    ```bash
+    # Check .env file format
+    cat .env | head -5
+    
+    # Test environment loading
+    node -e "console.log(process.env.OPENAI_API_KEY)"
+    
+    # Reset environment
+    elizaos env reset
+    ```
+  </Tab>
+  <Tab value="Database">
+    **Database Connection Issues**
+    
+    ```bash
+    # Test database connection
+    elizaos env test-db
+    
+    # Check database URL
+    elizaos env list | grep POSTGRES_URL
+    
+    # Switch to PGLite for development
+    echo "PGLITE_DATA_DIR=./data/pglite" >> .env
+    ```
+    
+    **Database Migration Issues**
+    
+    ```bash
+    # Reset database
+    rm -rf ./data/pglite
+    
+    # Recreate database
+    elizaos start --build
+    ```
+  </Tab>
+  <Tab value="Plugins">
+    **Plugin Installation Issues**
+    
+    ```bash
+    # List installed plugins
+    elizaos plugins installed-plugins
+    
+    # Remove problematic plugin
+    elizaos plugins remove @elizaos/plugin-name
+    
+    # Update all plugins
+    elizaos update --packages
+    ```
+    
+    **Plugin Compatibility Issues**
+    
+    ```bash
+    # Check plugin versions
+    elizaos plugins list --all
+    
+    # Install specific version
+    elizaos plugins add @elizaos/plugin-name@1.2.0
+    ```
+  </Tab>
+  <Tab value="CLI">
+    **CLI Issues**
+    
+    ```bash
+    # Update CLI
+    bun update -g @elizaos/cli
+    
+    # Check CLI version
+    elizaos --version
+    
+    # Get help
+    elizaos --help
+    ```
+    
+    **Permission Issues**
+    
+    ```bash
+    # Fix permissions
+    sudo chown -R $(whoami) ~/.bun
+    
+    # Or use sudo for global install
+    sudo bun install -g @elizaos/cli
+    ```
+  </Tab>
+</Tabs>
+
+### Getting Help
+
+<Callout type="info">
+Need help with configuration? Use these resources:
+</Callout>
+
+- **CLI Help**: `elizaos --help` or `elizaos <command> --help`
+- **Environment Check**: `elizaos env check`
+- **Troubleshooting Guide**: [Full troubleshooting guide](/docs/learning-tracks/simple/guides/troubleshooting-guide)
+- **Community**: [Discord support](https://discord.gg/elizaos)
+- **GitHub**: [Report issues](https://github.com/elizaOS/eliza/issues)
+
+## Next Steps
+
+<Cards>
+  <Card title="Core Concepts" href="/docs/core-concepts" icon="🧠">
+    Learn about ElizaOS architecture and concepts
+  </Card>
+  <Card title="Plugin Development" href="/docs/plugins/creating-plugins" icon="🔧">
+    Build your own plugins for ElizaOS
+  </Card>
+  <Card title="Advanced Features" href="/docs/advanced" icon="🚀">
+    Explore advanced ElizaOS features
+  </Card>
+  <Card title="Deployment" href="/docs/advanced/deployment" icon="📦">
+    Deploy your agents to production
+  </Card>
+</Cards>
+
+---
+
+**Configuration complete!** Your ElizaOS v1.2.0 environment is ready for development.
